# nnlogging

./: .gitignore  .prettierrc.json  .pylintrc  .sqlfluff  .yamllint.yml  README.md  pyproject.toml  pyrightconfig.json  ruff.toml
.woodpecker/: lint.yml  publish.yml  test.yml
scripts/: test.sh
src/nnlogging/: __init__.py  _global.py  shell.py  shell_protocol.py  utils.py
src/nnlogging/exceptions/: __init__.py  _bases.py  branch_exists.py  branch_not_found.py  task_exists.py  task_not_found.py
src/nnlogging/funcs/_db/: _add_or_remove.py  _archive.py  _close.py  _create.py  _track.py  _update.py
src/nnlogging/options/: _logger.py
src/nnlogging/shell/: __init__.py  protocol.py  shell.py
src/nnlogging/shell/exception/: __init__.py  branch_exists.py  branch_not_found.py  task_exists.py  task_not_found.py
src/nnlogging/shell/utils/: __init__.py  branch_funcs.py  logger_funcs.py  run_funcs.py  task_funcs.py
src/nnlogging/shell_funcs/: branch_.py  task_.py
src/nnlogging/typings/: __init__.py  _protocols.py  aliases.py  exceptions.py  generics.py  protocols.py
src/nnlogging/utils/: __init__.py  helpers.py  shell_factories.py
src/nnlogging/utils/exception/: branch_exists.py  branch_not_found.py  task_exists.py  task_not_found.py
src/nnlogging/utils/factory_funcs/: rich_.py  shell_.py
src/nnlogging/utils/shell_funcs/: branch_.py  logger_.py  run_.py  task_.py
tests/: conftest.py  milestone.md
tests/shell/: conftest.py  test_branch_funcs.py  test_configure.py  test_default_shell.py  test_init.py  test_logger_funcs.py  test_run_funcs.py  test_task_funcs.py
tests/typings/: conftest.py  test_minimal_protocol.py
tests/utils/: conftest.py  test_helper.py  test_logger_factory.py  test_rich_factory.py  test_run_factory.py
tests/v0.1.4/: conftest.py
tests/v0.1.4/shell/: conftest.py  test_configure.py  test_global_.py
tests/v0.1.4/shell/shell_funcs/: test_branch_.py  test_logger_.py  test_run_.py  test_task_.py
tests/v0.1.4/typings/: test_protocols.py
tests/v0.1.4/utils/: conftest.py  test_factories.py
tests/v0.2.0/: test_exceptions.py  test_helpers.py
tests/v0.2.0/funcs/: conftest.py  test_branch_funcs.py  test_db_funcs.py  test_log_funcs.py  test_render_funcs.py  test_task_funcs.py  test_track_artifact_funcs.py
tests/v0.2.0/typings/: test_jsontype.py
tests/v0.2.0/utils/: test_check_utils.py  test_log_utils.py  test_render_utils.py  test_rich_utils.py  test_store_utils.py
