[project]
name = "nnlogging"
version = "0.2.0a1"
description = "A powerful and elegant logging library designed specifically for neural network and machine learning experiments."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "amas127", email = "amadeusxu127@gmail.com" }]
keywords = ["experiment", "logging", "machine learning"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "blake3>=1",
  "duckdb>=1.4.0",
  "dvc>=3",
  "numpy>=2",
  "orjson>=3.10.0",
  "rich>=14.0.0",
]

[project.urls]
Issues = "https://codeberg.org/amas127/nnlogging/issues"
Repository = "https://codeberg.org/amas127/nnlogging.git"

[project.optional-dependencies]
pylint = ["pylint>=4.0.4"]
pytest = ["faker>=37", "pytest>=8", "pytest-cov>=7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
